<resources>
    <string name="app_name">Words With Crosses</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_clues">Clues</string>
    <string name="activity_puzzle_completed">Puzzle Completed!</string>
    <string name="hello">Hello World, Play!</string>
    <string name="menu_crosswords">Crosswords</string>
    <string name="menu_archives">Archives</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_unarchive">Un-archive</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_download">Download</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_bydate_asc">By Date (Ascending)</string>
    <string name="menu_bydate_desc">By Date (Descending)</string>
    <string name="menu_bysource">By Source</string>
    <string name="menu_byauthor">By Author</string>
    <string name="menu_cleanup">Cleanup</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_select_puzzle_sources">Select Puzzle Sources</string>
    <string name="pref_daily_crosswords">Daily Crosswords</string>
    <string name="pref_daily_crosswords_summary">Puzzles which update daily</string>
    <string name="pref_weekly_crosswords">Weekly Crosswords</string>
    <string name="pref_weekly_crosswords_summary">Puzzles which update weekly</string>
    <string name="pref_monthly_crosswords">Monthly Crosswords</string>
    <string name="pref_monthly_crosswords_summary">Puzzles which update monthly</string>
    <string name="pref_requires_subscription">Requires subscription</string>
    <string name="pref_username">Username</string>
    <string name="pref_nyt_mini_summary">Daily 5x5 mini puzzle</string>
    <string name="pref_nyt_bonus_summary">Available on 1st of each month</string>
    <string name="pref_username_summary_nyt">NYT Username or Email Address</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary_nyt">NYT Password</string>
    <string name="pref_get_subscription">Get a Subscription</string>
    <string name="pref_updates_mon_to_sat">Updates Monday–Saturday</string>
    <string name="pref_updates_thu">Updates Thursdays</string>
    <string name="pref_updates_sun">Updates Sundays</string>
    <string name="pref_derstandard_summary">Updates Monday–Saturday\nGerman cryptic crosswords</string>
    <string name="pref_avxw_summary">Requires subscription. Updates Wednesdays.</string>
    <string name="pref_username_summary_avxw">AVXW Username or Email Address</string>
    <string name="pref_password_summary_avxw">AVXW Password</string>
    <string name="pref_andykravis_summary">Updates Sundays\nhttp://cruciverbalistatlaw.blogspot.com/</string>
    <string name="pref_crooked_summary">Requires subscription. Updates Sundays.</string>
    <string name="pref_username_summary_crooked">CRooked Crosswords Username or Email Address</string>
    <string name="pref_password_summary_crooked">CRooked Crosswords Password</string>
    <string name="pref_crossword_nation_summary">Requires subscription. Updates Tuesdays.</string>
    <string name="pref_username_summary_crossword_nation">Crossword Nation Username or Email Address</string>
    <string name="pref_password_summary_crossword_nation">Crossword Nation Password</string>
    <string name="pref_devilcross_summary">Updates every other Saturday\nhttp://devilcross.com/</string>
    <string name="pref_erikagard_summary">Updates Wednesdays\nhttp://gluttonforpun.blogspot.com/</string>
    <string name="pref_inkwell_summary">Updates Fridays (ends June 2014)</string>
    <string name="pref_nevillefogarty_summary">Updates Fridays (ends Sept 2014)\nhttp://nevillefogarty.wordpress.com/</string>
    <string name="pref_people_summary">Updates Fridays\nNo archives available</string>
    <string name="pref_wapopuzzler_summary">Updates Sundays (ends March 2015)</string>
    <string name="pref_che_summary">Updates Fridays (biweekly during the summer)</string>
    <string name="pref_mmmm_summary">Updates first Tuesday of the month\nSubmit meta answer online at:\nhttp://pmxwords.com</string>
    <string name="pref_blindauer_summary">Updates on 1st of the month\nhttp://www.patrickblindauer.com</string>
    <string name="pref_about_puzzles">About Puzzles</string>
    <string name="pref_about_puzzles_summary">Links to home pages of puzzles included with Words With Crosses</string>
    <string name="pref_more_puzzle_links">More Puzzle Links</string>
    <string name="pref_more_puzzle_links_summary">Links to more puzzles not included with Words With Crosses</string>
    <string name="pref_application_settings">Application Settings</string>
    <string name="pref_automatic_download">Automatic Download</string>
    <string name="pref_automatic_download_summary">Download today\'s puzzles when starting the application</string>
    <string name="pref_show_errors">Show Errors</string>
    <string name="pref_show_errors_summary">Highlights incorrect letters in red</string>
    <string name="pref_show_revealed_letters">Show Revealed Letters</string>
    <string name="pref_show_revealed_letters_summary">Highlights revealed letters or previously incorrect letters in pink</string>
    <string name="pref_delete_on_cleanup">Delete on Cleanup</string>
    <string name="pref_delete_on_cleanup_summary">Delete rather than archive old puzzles</string>
    <string name="pref_cleanup_unfinished">Cleanup Unfinished</string>
    <string name="pref_cleanup_unfinished_summary">Determines how old an unfinished puzzle must be before it is archived/deleted</string>
    <string name="pref_snap_to_current_word">Snap to Current Word</string>
    <string name="pref_snap_to_current_word_summary">Toggles the auto-scrolling of the playboard to the current play position</string>
    <string name="pref_show_length">Show Length</string>
    <string name="pref_show_length_summary">Shows the number of letters in the answer on the clue line</string>
    <string name="pref_scroll_to_clue">Scroll To Clue</string>
    <string name="pref_scroll_to_clue_summary">Toggles the auto-scrolling to the selected clue in the clues list mode. (Works like Shortyz 1)</string>
    <string name="pref_movement_style">Movement Style</string>
    <string name="pref_movement_style_summary">Select what happens when you type past the end of a word</string>
    <string name="pref_delete_crosses_boundaries">Delete Crosses Boundaries</string>
    <string name="pref_delete_crosses_boundaries_summary">Select whether delete continues past the beginning of a word</string>
    <string name="pref_skip_filled_boxes">Skip Filled Boxes</string>
    <string name="pref_skip_filled_boxes_summary">Toggles the skipping of filled boxes when you enter a new letter</string>
    <string name="pref_space_changes_direction">Space Changes Direction</string>
    <string name="pref_space_changes_direction_summary">Spacebar changed direction rather than blanking the box</string>
    <string name="pref_enter_changes_direction">Enter Changes Direction</string>
    <string name="pref_enter_changes_direction_summary">Enter changes direction rather than moving to the next clue</string>
    <string name="pref_clue_size">Clue Text Size</string>
    <string name="pref_clue_size_summary">Sets the font size of clues</string>
    <string name="pref_initial_zoom">Initial Zoom</string>
    <string name="pref_initial_zoom_summary">Sets the initial zoom when opening a puzzle</string>
    <string name="pref_double_tap_zoom">Double Tap Zoom</string>
    <string name="pref_double_tap_zoom_summary">Double tap toggles between fit to screen, and your default zoom</string>
    <string name="pref_touch_sensitivity">Touch Sensitivity</string>
    <string name="pref_touch_sensitivity_summary">Sensitivity of detecting taps to select board cells vs. dragging the board</string>
    <string name="pref_show_timer">Show Timer</string>
    <string name="pref_show_timer_summary">Shows your puzzle time</string>
    <string name="pref_show_progress_bar">Show Progress Bar</string>
    <string name="pref_show_progress_bar_summary">Shows your puzzle progress at the top of the screen.\nYou must leave and re-enter a puzzle to apply.</string>
    <string name="pref_full_screen">Full Screen</string>
    <string name="pref_full_screen_summary">Hides the notification bar.\nYou must leave and re-enter a puzzle to apply.</string>
    <string name="pref_show_keyboard">Show Keyboard</string>
    <string name="pref_show_keyboard_summary">Set when the software keyboard is shown</string>
    <string name="pref_keyboard_style">Keyboard Style</string>
    <string name="pref_keyboard_style_summary">Select soft keyboard layout</string>
    <string name="pref_orientation_lock">Orientation Lock</string>
    <string name="pref_orientation_lock_summary">Locks the screen location</string>
    <string name="pref_category_notifications">Notification Settings</string>
    <string name="pref_enable_notifications">Enable Notifications</string>
    <string name="pref_enable_notifications_summary">Enables general puzzle download notifications</string>
    <string name="pref_individual_download_notifications">Individual Puzzle Notifications</string>
    <string name="pref_individual_download_notifications_summary">Enables a notification for each puzzle downloaded</string>
    <string name="pref_about_app">About Words With Crosses</string>
    <string name="pref_release_notes">Release Notes</string>
    <string name="pref_license">License</string>
    <string name="pref_source_code">Source Code</string>
    <string name="pref_send_debug_package">Send Debug Package</string>
    <string name="pref_send_debug_package_summary">Emails debugging information about your device to the developer</string>
    <string name="sources">Sources</string>
    <string name="puzzles">Puzzles</string>
    <string name="source_download">Downloaded Puzzles</string>
    <string name="source_unknown">Unknown Source</string>
    <string name="source_all_available">All available</string>
    <string name="author_unknown">Unknown Author</string>
    <string name="puzzle_untitled">Untitled</string>
    <string name="across">Across</string>
    <string name="down">Down</string>
    <string name="completed_in">Completed In</string>
    <string name="total_clues">Total Clues</string>
    <string name="total_boxes">Total Boxes</string>
    <string name="hinted_boxes">Hinted Boxes</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="share_text">I finished the %1$s crossword for %2$s in %3$s in #WordsWithCrosses!</string>
    <plurals name="share_text_hinted">
      <item quantity="one">I finished the %1$s crossword for %2$s in %3$s but got one hint (%5$s) in #WordsWithCrosses!</item>
      <item quantity="other">I finished the %1$s crossword for %2$s in %3$s but got %4$d hints (%5$s) in #WordsWithCrosses!</item>
    </plurals>
    <string name="show_all">Show All</string>
    <string name="puzzle_select">Select a puzzle:</string>
    <string name="downloading_puzzles">Downloading Puzzles</string>
    <string name="downloading_from">Downloading from %s</string>
    <string name="downloading_newline">Downloading\n</string>
    <string name="downloaded_new_puzzles_title">Downloaded new puzzles!</string>
    <string name="downloaded_new_puzzles_text">New puzzles were downloaded.</string>
    <string name="downloaded_puzzle_title">Downloaded %s</string>
    <string name="download_failed">Download failed: %s</string>
    <string name="download_failed_newline">Download failed:\n</string>
    <string name="unknown_extension">Unknown file extension:\u0020</string>
    <string name="loading_puzzle">Loading puzzle…</string>
    <string name="load_puzzle_failed">Failed to load puzzle:\n</string>
</resources>